--- a/src/renderer/CSS/Signup.css
+++ b/src/renderer/CSS/Signup.css
@@ -1,12 +1,19 @@
 #SIGNUP {
-    width: calc(100% - 100px);
-    height: calc(100% - 100px);
-    color: black;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -moz-transform: translateX(-50%) translateY(-50%);
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
+  width: calc(100% - 100px);
+  height: calc(100% - 100px);
+  color: black;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+}
+
+#signup-form {
+  width: calc(100% - 375px);
+  background-color: rgba(255, 255, 255, 0.5);
+  position: absolute;
+  border: 1.5px solid black;
 }
 
